--- a/Exercise 5- Flexbox Layout/styles/styles.css
+++ b/Exercise 5- Flexbox Layout/styles/styles.css
@@ -6,11 +6,11 @@ body {
   }
   
   header {
-    background-color: #3b5998; /* Facebook Blue */
-    padding: 15px;
-    text-align: center;
+    background-color: #1560BD; 
     color: #fff;
-  }
+    text-align: center;
+    padding: 20px;
+}
   
   nav {
     display: flex;
@@ -38,18 +38,20 @@ body {
     }
   
     nav a {
-      margin-top: 5px;
+      margin-top: 2px;
     }
   }
   
   main {
-    padding: 20px;
+    padding: 10px;
   }
   
-  h1, h2 {
+  h2 {
     color: #3b5998; /* Facebook Blue */
   }
-  
+  h1 {
+    color:#fff;
+  }
   p {
     line-height: 1.6;
   }
